creating competition entity with dtos, service , mapper and controller